@@ -1,5 +1,10 @@
 package nl.softcause.jsontemplates.nodes;
 
+import static org.hamcrest.CoreMatchers.is;
+import static org.junit.Assert.assertThat;
+
+import java.util.Collections;
+import java.util.Map;
 import nl.softcause.jsontemplates.expressions.Constant;
 import nl.softcause.jsontemplates.expressions.Variable;
 import nl.softcause.jsontemplates.model.*;
@@ -12,21 +17,15 @@ import nl.softcause.jsontemplates.syntax.TypeCheckException;
 import nl.softcause.jsontemplates.types.Types;
 import org.junit.Test;
 
-import java.util.Collections;
-import java.util.Map;
-
-import static org.hamcrest.CoreMatchers.is;
-import static org.junit.Assert.assertThat;
-
 @SuppressWarnings("unchecked")
 public class NodeTypeCheckerTest {
 
     @Test
-    public void should_pass_type_checker_with_minimal_fields(){
+    public void should_pass_type_checker_with_minimal_fields() {
         var assertionNode = new AssertionNode();
-        var forNode =  For.create(
+        var forNode = For.create(
                 Collections.singletonMap("until", new Constant(3)),
-                Collections.singletonMap("body", new INode[]{assertionNode})
+                Collections.singletonMap("body", new INode[] {assertionNode})
         );
 
         var definition = new DefinedModel(TestNestedDefinition.class);
@@ -36,9 +35,9 @@ public class NodeTypeCheckerTest {
     }
 
     @Test
-    public void should_pass_type_checker_with_object_fields(){
-        var setNode =  Set.create(
-                Map.of( "path", new Constant("name"),
+    public void should_pass_type_checker_with_object_fields() {
+        var setNode = Set.create(
+                Map.of("path", new Constant("name"),
                         "value", new Constant("Hello world"))
         );
 
@@ -49,11 +48,11 @@ public class NodeTypeCheckerTest {
     }
 
     @Test
-    public void should_pass_type_checker_with_variable_from_model(){
+    public void should_pass_type_checker_with_variable_from_model() {
         var assertionNode = new AssertionNode();
-        var forNode =  For.create(
+        var forNode = For.create(
                 Collections.singletonMap("until", new Variable("age")),
-                Collections.singletonMap("body", new INode[]{assertionNode})
+                Collections.singletonMap("body", new INode[] {assertionNode})
         );
 
         var definition = new DefinedModel(TestDefinition.class);
@@ -63,11 +62,11 @@ public class NodeTypeCheckerTest {
     }
 
     @Test
-    public void should_pass_type_checker_with_all_fields(){
+    public void should_pass_type_checker_with_all_fields() {
         var assertionNode = new AssertionNode();
-        var forNode =  For.create(
-                Map.of("start", new Constant(0),"step", new Constant(1),"until", new Constant(3)),
-                Collections.singletonMap("body", new INode[]{assertionNode})
+        var forNode = For.create(
+                Map.of("start", new Constant(0), "step", new Constant(1), "until", new Constant(3)),
+                Collections.singletonMap("body", new INode[] {assertionNode})
         );
 
         var definition = new DefinedModel(TestNestedDefinition.class);
@@ -77,45 +76,47 @@ public class NodeTypeCheckerTest {
     }
 
     @Test
-    public void should_reject_type_checker_with_wrong(){
+    public void should_reject_type_checker_with_wrong() {
         var assertionNode = new AssertionNode();
-        var forNode =  For.create(
+        var forNode = For.create(
                 Collections.singletonMap("until", new Constant("3")),
-                Collections.singletonMap("body", new INode[]{assertionNode})
+                Collections.singletonMap("body", new INode[] {assertionNode})
         );
 
         var definition = new DefinedModel(TestNestedDefinition.class);
         var model = new TemplateModel<>(definition);
         try {
             new NodeTypeChecker(model).check(forNode);
-        } catch (TypeCheckException TCe){
-            assertThat(TCe.getMessage(), is(TypeCheckException.typeError(Types.INTEGER, Types.TEXT, "until").getMessage()));
+        } catch (TypeCheckException TCe) {
+            assertThat(TCe.getMessage(),
+                    is(TypeCheckException.typeError(Types.INTEGER, Types.TEXT, "until").getMessage()));
         }
     }
 
     @Test
-    public void should_reject_type_checker_with_wrong_optional(){
+    public void should_reject_type_checker_with_wrong_optional() {
         var assertionNode = new AssertionNode();
-        var forNode =  For.create(
-                Map.of("start", new Constant("0"),"step", new Constant(1),"until", new Constant(3)),
-                Collections.singletonMap("body", new INode[]{assertionNode})
+        var forNode = For.create(
+                Map.of("start", new Constant("0"), "step", new Constant(1), "until", new Constant(3)),
+                Collections.singletonMap("body", new INode[] {assertionNode})
         );
 
         var definition = new DefinedModel(TestNestedDefinition.class);
         var model = new TemplateModel<>(definition);
         try {
             new NodeTypeChecker(model).check(forNode);
-        } catch (TypeCheckException TCe){
-            assertThat(TCe.getMessage(), is(TypeCheckException.typeError(Types.OPTIONAL_INTEGER, Types.TEXT, "start").getMessage()));
+        } catch (TypeCheckException TCe) {
+            assertThat(TCe.getMessage(),
+                    is(TypeCheckException.typeError(Types.OPTIONAL_INTEGER, Types.TEXT, "start").getMessage()));
         }
     }
 
     @Test
-    public void should_accept_type_checker_with_null_values_for_optional_nullabel_fields(){
+    public void should_accept_type_checker_with_null_values_for_optional_nullabel_fields() {
         var assertionNode = new AssertionNode();
-        var forNode =  For.create(
-                Map.of("start", new Constant(null),"step", new Constant(1),"until", new Constant(3)),
-                Collections.singletonMap("body", new INode[]{assertionNode})
+        var forNode = For.create(
+                Map.of("start", new Constant(null), "step", new Constant(1), "until", new Constant(3)),
+                Collections.singletonMap("body", new INode[] {assertionNode})
         );
 
         var definition = new DefinedModel(TestNestedDefinition.class);
@@ -125,22 +126,22 @@ public class NodeTypeCheckerTest {
     }
 
     @Test
-    public void should_pass_type_checker_with_nested_fields(){
+    public void should_pass_type_checker_with_nested_fields() {
         var assertionNodeFirst = new AssertionNode();
         var assertionNodeSecond = new AssertionNode();
         var assertionNodeOther = new AssertionNode();
         var caseNodeFirst = Switch.Case.create(
                 Collections.singletonMap("test", new Constant(true)),
-                Map.of("body", new INode[]{assertionNodeFirst})
+                Map.of("body", new INode[] {assertionNodeFirst})
         );
         var caseNodeSecond = Switch.Case.create(
                 Collections.singletonMap("test", new Constant(false)),
-                Map.of("body", new INode[]{assertionNodeSecond})
+                Map.of("body", new INode[] {assertionNodeSecond})
         );
         var switchNode = Switch.create(
                 Map.of(
-                        "case", new INode[]{caseNodeFirst,caseNodeSecond},
-                        "default", new INode[]{assertionNodeOther}
+                        "case", new INode[] {caseNodeFirst, caseNodeSecond},
+                        "default", new INode[] {assertionNodeOther}
                 )
         );
         var definition = new DefinedModel(TestNestedDefinition.class);
@@ -150,18 +151,18 @@ public class NodeTypeCheckerTest {
     }
 
     @Test
-    public void should_reject_wrong_nested_fields(){
+    public void should_reject_wrong_nested_fields() {
         var assertionNodeFirst = new AssertionNode();
         var assertionNodeSecond = new AssertionNode();
         var assertionNodeOther = new AssertionNode();
         var caseNodeFirst = Switch.Case.create(
                 Collections.singletonMap("test", new Constant(true)),
-                Map.of("body", new INode[]{assertionNodeFirst})
+                Map.of("body", new INode[] {assertionNodeFirst})
         );
         var switchNode = Switch.create(
                 Map.of(
-                        "case", new INode[]{caseNodeFirst,assertionNodeSecond},
-                        "default", new INode[]{assertionNodeOther}
+                        "case", new INode[] {caseNodeFirst, assertionNodeSecond},
+                        "default", new INode[] {assertionNodeOther}
                 )
         );
         var definition = new DefinedModel(TestNestedDefinition.class);
@@ -169,32 +170,34 @@ public class NodeTypeCheckerTest {
 
         try {
             new NodeTypeChecker(model).check(switchNode);
-        } catch (TypeCheckException TCe){
-            assertThat(TCe.getMessage(), is(TypeCheckException.slotMismatch("case", new LimitedSlot(new Class[]{Switch.Case.class}), assertionNodeSecond).getMessage()));
+        } catch (TypeCheckException TCe) {
+            assertThat(TCe.getMessage(), is(TypeCheckException
+                    .slotMismatch("case", new LimitedSlot(new Class[] {Switch.Case.class}), assertionNodeSecond)
+                    .getMessage()));
         }
     }
 
     @Test
-    public void should_pass_type_checker_with_deeply_nested_fields(){
+    public void should_pass_type_checker_with_deeply_nested_fields() {
         var assertionNodeFirst = new AssertionNode();
         var assertionNode = new AssertionNode();
-        var forNode =  For.create(
-                Map.of("start", new Constant(0),"step", new Constant(1),"until", new Constant(3)),
-                Collections.singletonMap("body", new INode[]{assertionNode})
+        var forNode = For.create(
+                Map.of("start", new Constant(0), "step", new Constant(1), "until", new Constant(3)),
+                Collections.singletonMap("body", new INode[] {assertionNode})
         );
         var assertionNodeOther = new AssertionNode();
         var caseNodeFirst = Switch.Case.create(
                 Collections.singletonMap("test", new Constant(true)),
-                Map.of("body", new INode[]{assertionNodeFirst})
+                Map.of("body", new INode[] {assertionNodeFirst})
         );
         var caseNodeSecond = Switch.Case.create(
                 Collections.singletonMap("test", new Constant(false)),
-                Map.of("body", new INode[]{forNode})
+                Map.of("body", new INode[] {forNode})
         );
         var switchNode = Switch.create(
                 Map.of(
-                        "case", new INode[]{caseNodeFirst,caseNodeSecond},
-                        "default", new INode[]{assertionNodeOther}
+                        "case", new INode[] {caseNodeFirst, caseNodeSecond},
+                        "default", new INode[] {assertionNodeOther}
                 )
         );
         var definition = new DefinedModel(TestNestedDefinition.class);
@@ -204,37 +207,38 @@ public class NodeTypeCheckerTest {
     }
 
     @Test
-    public void should_pass_type_include_nested_scope(){
+    public void should_pass_type_include_nested_scope() {
         var assertionNodeFirst = new AssertionNode();
         var assertionNode = new AssertionNode();
-        var forNode =  For.create(
-                Map.of("start", new Variable("scope.start"),"step", new Variable("scope.step"),"until", new Variable("age")),
-                Collections.singletonMap("body", new INode[]{assertionNode})
+        var forNode = For.create(
+                Map.of("start", new Variable("scope.start"), "step", new Variable("scope.step"), "until",
+                        new Variable("age")),
+                Collections.singletonMap("body", new INode[] {assertionNode})
         );
         var assertionNodeOther = new AssertionNode();
         var caseNodeFirst = Switch.Case.create(
                 Collections.singletonMap("test", new Constant(true)),
-                Map.of("body", new INode[]{assertionNodeFirst})
+                Map.of("body", new INode[] {assertionNodeFirst})
         );
         var caseNodeSecond = Switch.Case.create(
                 Collections.singletonMap("test", new Constant(false)),
-                Map.of("body", new INode[]{forNode})
+                Map.of("body", new INode[] {forNode})
         );
         var switchNode = Switch.create(
                 Map.of(
-                        "case", new INode[]{caseNodeFirst,caseNodeSecond},
-                        "default", new INode[]{assertionNodeOther}
+                        "case", new INode[] {caseNodeFirst, caseNodeSecond},
+                        "default", new INode[] {assertionNodeOther}
                 )
         );
-        var setStartNode =  Set.create(
-                Map.of( "path", new Constant("scope.start"),
+        var setStartNode = Set.create(
+                Map.of("path", new Constant("scope.start"),
                         "value", new Constant(0))
         );
-        var setStepNode =  Set.create(
-                Map.of( "path", new Constant("scope.step"),
+        var setStepNode = Set.create(
+                Map.of("path", new Constant("scope.step"),
                         "value", new Constant(1))
         );
-        var mainNode = new MultiNode(new INode[]{setStartNode,setStepNode,switchNode});
+        var mainNode = new MultiNode(new INode[] {setStartNode, setStepNode, switchNode});
         var definition = new DefinedModel(TestDefinition.class);
         var model = new TemplateModel<>(definition);
 
@@ -242,38 +246,39 @@ public class NodeTypeCheckerTest {
     }
 
     @Test
-    public void should_pass_type_include_deeper_nested_scope(){
+    public void should_pass_type_include_deeper_nested_scope() {
         var assertionNodeFirst = new AssertionNode();
         var assertionNode = new AssertionNode();
-        var forNode =  For.create(
-                Map.of("start", new Variable("scope.start"),"step", new Variable("scope.step"),"until", new Variable("age")),
-                Collections.singletonMap("body", new INode[]{assertionNode})
+        var forNode = For.create(
+                Map.of("start", new Variable("scope.start"), "step", new Variable("scope.step"), "until",
+                        new Variable("age")),
+                Collections.singletonMap("body", new INode[] {assertionNode})
         );
         var assertionNodeOther = new AssertionNode();
         var caseNodeFirst = Switch.Case.create(
                 Collections.singletonMap("test", new Constant(true)),
-                Map.of("body", new INode[]{assertionNodeFirst})
+                Map.of("body", new INode[] {assertionNodeFirst})
         );
-        var setStepNode =  Set.create(
-                Map.of( "path", new Constant("scope.step"),
+        var setStepNode = Set.create(
+                Map.of("path", new Constant("scope.step"),
                         "value", new Constant(1))
         );
         var caseNodeSecond = Switch.Case.create(
                 Collections.singletonMap("test", new Constant(false)),
-                Map.of("body", new INode[]{setStepNode,forNode})
+                Map.of("body", new INode[] {setStepNode, forNode})
         );
         var switchNode = Switch.create(
                 Map.of(
-                        "case", new INode[]{caseNodeFirst,caseNodeSecond},
-                        "default", new INode[]{assertionNodeOther}
+                        "case", new INode[] {caseNodeFirst, caseNodeSecond},
+                        "default", new INode[] {assertionNodeOther}
                 )
         );
-        var setStartNode =  Set.create(
-                Map.of( "path", new Constant("scope.start"),
+        var setStartNode = Set.create(
+                Map.of("path", new Constant("scope.start"),
                         "value", new Constant(0))
         );
 
-        var mainNode = new MultiNode(new INode[]{setStartNode,switchNode});
+        var mainNode = new MultiNode(new INode[] {setStartNode, switchNode});
         var definition = new DefinedModel(TestDefinition.class);
         var model = new TemplateModel<>(definition);
 
@@ -281,46 +286,47 @@ public class NodeTypeCheckerTest {
     }
 
     @Test
-    public void should_fail_type_check_on_to_deep_include_scope_elements(){
+    public void should_fail_type_check_on_to_deep_include_scope_elements() {
         var assertionNodeFirst = new AssertionNode();
         var assertionNode = new AssertionNode();
-        var setStepNode =  Set.create(
-                Map.of( "path", new Constant("scope.step"),
+        var setStepNode = Set.create(
+                Map.of("path", new Constant("scope.step"),
                         "value", new Constant(1))
         );
 
-        var forNode =  For.create(
-                Map.of("start", new Variable("scope.start"),"step", new Variable("scope.step"),"until", new Variable("age")),
-                Collections.singletonMap("body", new INode[]{setStepNode,assertionNode})
+        var forNode = For.create(
+                Map.of("start", new Variable("scope.start"), "step", new Variable("scope.step"), "until",
+                        new Variable("age")),
+                Collections.singletonMap("body", new INode[] {setStepNode, assertionNode})
         );
         var assertionNodeOther = new AssertionNode();
         var caseNodeFirst = Switch.Case.create(
                 Collections.singletonMap("test", new Constant(true)),
-                Map.of("body", new INode[]{assertionNodeFirst})
+                Map.of("body", new INode[] {assertionNodeFirst})
         );
 
         var caseNodeSecond = Switch.Case.create(
                 Collections.singletonMap("test", new Constant(false)),
-                Map.of("body", new INode[]{forNode})
+                Map.of("body", new INode[] {forNode})
         );
         var switchNode = Switch.create(
                 Map.of(
-                        "case", new INode[]{caseNodeFirst,caseNodeSecond},
-                        "default", new INode[]{assertionNodeOther}
+                        "case", new INode[] {caseNodeFirst, caseNodeSecond},
+                        "default", new INode[] {assertionNodeOther}
                 )
         );
-        var setStartNode =  Set.create(
-                Map.of( "path", new Constant("scope.start"),
+        var setStartNode = Set.create(
+                Map.of("path", new Constant("scope.start"),
                         "value", new Constant(0))
         );
 
-        var mainNode = new MultiNode(new INode[]{setStartNode,switchNode});
+        var mainNode = new MultiNode(new INode[] {setStartNode, switchNode});
         var definition = new DefinedModel(TestDefinition.class);
         var model = new TemplateModel<>(definition);
 
         try {
             new NodeTypeChecker(model).check(mainNode);
-        } catch (ScopeException Se){
+        } catch (ScopeException Se) {
             assertThat(Se.getMessage(), is(ScopeException.notFound("step").getMessage()));
         }
     }
